style: Adjust style to stop overflow

--- a/scss/styles.sub.scss
+++ b/scss/styles.sub.scss
@@ -23,7 +23,7 @@
           tr {
             td {
               &:last-of-type {
-                font-size: 1.2em;
+                font-size: 1.1em;
               }
             }
           }
